[gd_scene load_steps=8 format=3 uid="uid://f2qeohbtjoc8"]

[ext_resource type="Script" path="res://scenes/npc/butterfly/butterfly.gd" id="1_dn126"]
[ext_resource type="Texture2D" uid="uid://cpiasj6x5jnrd" path="res://scenes/npc/butterfly/npc-babochy.png" id="2_tnihr"]
[ext_resource type="Texture2D" uid="uid://by0xpdkqxrnvi" path="res://scenes/npc/F.png" id="3_cq35d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jimj3"]
size = Vector2(122, 120)

[sub_resource type="Animation" id="Animation_4a1o1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nt07m"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cmjd8"]
_data = {
"RESET": SubResource("Animation_4a1o1"),
"idle": SubResource("Animation_nt07m")
}

[node name="Butterfly" type="Node2D"]
script = ExtResource("1_dn126")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tnihr")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_jimj3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cmjd8")
}

[node name="InteractionHint" type="Sprite2D" parent="."]
visible = false
position = Vector2(48, -50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_cq35d")

[connection signal="body_entered" from="Area2D" to="." method="_on_dialog_area_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_dialog_area_body_exited"]
